[metadata]
name = tweety-ns
version = 2.0.4
author = Tayyab Kharl
author_email = tayyabmahr@gmail.com
description = An easy Twitter Scraper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mahrtayyab/tweety
project_urls =
    Bug Tracker = https://github.com/mahrtayyab/tweety/issues
    Documentation = https://github.com/mahrtayyab/tweety
classifiers =
    Programming Language :: Python :: 4
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src